[tool.poetry]
name = "vm_servers"
version = "0.1.0"
description = ""
authors = ["Mikey Mo <mikeyjkmo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
